[package]
name = "web-proxy"
version = "0.1.0"
authors = ["YISH"]

[dependencies]
futures = "0.1.14"
hyper = "0.11.25"
reqwest = "0.8.5"
error-chain = "0.11.0"
chrono = "0.4.2"
byteorder = "1.2.2"
toml = "0.4.6"
serde = "1.0.43"
serde_derive = "1.0.43"
filetime = "0.2.0"
url = "1.7.0"
regex = "1.0.0"
lazy_static = "1.0.0"
base64 = "0.9.1"
mime = "0.3.5"
log = "0.4.1"
env_logger = "0.5.9"